# synnefo

astakosclient/: pyproject.toml
astakosclient/docs/: conf.py
astakosclient/src/astakosclient/: __init__.py  errors.py  utils.py
astakosclient/src/astakosclient/tests/: tests.py
